--- a/angelo/Untitled-2.html
+++ b/angelo/Untitled-2.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It's My Birthday!</title>
-    <link rel="stylesheet" href="C:\Users\angelo amoateng\Desktop\glostal farms\2.css">
+    <link rel="stylesheet" href="C:\Users\angelo amoateng\Desktop\angelo\2.css">
 </head>
 <body>
     <div class="container">
         <h1>🎉 Today is Angelo's Birthday! 🎉</h1>
         <p>Hi friends and family! I'm so excited to share this special day with you.</p>
         <p>Thank you for being part of my journey. Your love and support mean the world to me!</p>
-        <a href="C:\Users\angelo amoateng\Desktop\glostal farms\money.html"><button id="celebrate-btn" class="celebrate">Click Here to Celebrate with Me!</button></a>
+        <a href="C:\Users\angelo amoateng\Desktop\angelo\money.html"><button id="celebrate-btn" class="celebrate">Click Here to Celebrate with Me!</button></a>
     </div>
     <footer>Made with ❤️ for my birthday!</footer>
-    <script src="C:\Users\angelo amoateng\Desktop\glostal farms\2.js"></script>
+    <script src="C:\Users\angelo amoateng\Desktop\angelo\2.js"></script>
 </body>
 </html>
