--- a/angelo/money.html
+++ b/angelo/money.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Send Me Money</title>
-    <link rel="stylesheet" href="C:\Users\angelo amoateng\Desktop\glostal farms\css.css">
+    <link rel="stylesheet" href="C:\Users\angelo amoateng\Desktop\angelo\css.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <button class="copy-btn" onclick="copyToClipboard()">Copy Contact</button>
         <p id="status"></p>
     </div>
-    <script src="C:\Users\angelo amoateng\Desktop\glostal farms\java.js"></script>
+    <script src="C:\Users\angelo amoateng\Desktop\angelo\java.js"></script>
 </body>
 </html>
